GS-13857 : Minor alignment fixes for win OS (cherry picked from commit 3daadce)

--- a/src/webapp/res/css/15_pdf/realEstate.css
+++ b/src/webapp/res/css/15_pdf/realEstate.css
@@ -378,7 +378,7 @@ hr.rulethin	{
 }
 
 .mod-3 .inner .realEstateProfile{
-    padding: 10px;
+    padding: 15px;
     margin-bottom:15px;
     border: 1px solid #DDDDDD;
 
@@ -393,7 +393,7 @@ hr.rulethin	{
 
 }
 .mod-3 .inner .qrCode{
-    padding: 10px;
+    padding: 15px;
     border: 1px solid #DDDDDD;
 
 }
@@ -403,7 +403,7 @@ hr.rulethin	{
 
 .qrCode .qrCodeDescription{
     vertical-align: middle;
-    margin: 50px 30px;
+    margin: 30px 30px;
 }
 
 
